--- a/package.json
+++ b/package.json
@@ -13,18 +13,17 @@
   "keywords": [],
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^20.4.1",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2",
-    "typescript": "^4.9.5",
-    "vite": "^4.3.6",
-    "vite-plugin-solid": "^2.7.0"
+    "@types/node": "^22.10.10",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.7.3",
+    "vite": "^6.0.11",
+    "vite-plugin-solid": "^2.11.0"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "jsdom": "^24.1.1",
-    "mhtml2html": "^3.0.0",
-    "solid-js": "^1.7.11"
+    "express": "^4.21.2",
+    "fast-mhtml": "^2.1.0",
+    "solid-js": "^1.9.4"
   }
 }
