--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^22.10.10",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1",
     "tailwindcss": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.0",
     "typescript": "^5.7.3",
     "vite": "^6.0.11",
     "vite-plugin-solid": "^2.11.0"
@@ -24,6 +23,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "fast-mhtml": "^2.1.0",
+    "multer": "1.4.5-lts.1",
     "solid-js": "^1.9.4"
   }
 }
