--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webp-viewer",
-  "version": "0.5.1",
+  "version": "0.5.2",
   "description": "",
   "author": "noetu",
   "type": "module",
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^22.10.10",
     "tailwindcss": "^4.0.0",
     "typescript": "^5.7.3",
@@ -23,6 +24,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "fast-mhtml": "^2.1.0",
+    "lodash": "^4.17.21",
     "multer": "1.4.5-lts.1",
     "solid-js": "^1.9.4"
   }
